--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,78 @@
-.titulo{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body, html {
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+
+.titulo {
     text-align: center;
+}
+
+main{
+    display: flex;
+    width: 100%;
+    height: 100vh; /* Hace que ocupe toda la pantalla */
+}
+
+.menu {
+    width: 20%; /* O el porcentaje que prefieras */
+    background-color: #646464;
+    color: #fff;
+    padding: 20px;
+    min-height: 100vh; /* Ocupa toda la altura de la pantalla */
+}
+
+.contenido {
+    width: 80%; /* Ocupará el resto del espacio */
+    padding: 20px;
+    background-color: #fff; /* Asegura que el fondo sea visible */
+}
+
+.subtitulo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+figure {
+    text-align: center;
+    width: 30%; 
+}
+
+img {
+    width: 300px;
+    height: auto;
+    object-fit: cover;
+    margin: 10px;
+}
+
+section{
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+}
+
+footer, header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
 }
