--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -14,12 +14,30 @@ body, html {
     text-align: center;
 }
 
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
 main {
     display: flex;
     width: 100%;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
+    padding-top: 50px; /* Ajuste para que el contenido no se superponga con el header */
+}
+
+img {
+    width: 250px;
+    height: auto;
+    object-fit: cover;
+    margin: 10px;
 }
 
 .menu {
@@ -28,10 +46,17 @@ main {
     color: #fff;
     padding: 20px;
     min-height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 50px; /* Para que no cubra el header */
+    bottom: 50px;
+    overflow-y: auto;
+    z-index: 999;
 }
 
 .contenido {
     width: 80%;
+    margin-left: 20%;
     padding: 20px;
     background-color: #fff;
     display: flex;
@@ -61,19 +86,9 @@ section {
     width: 100%;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    width: 100%;
-    margin: 0 auto;
-    align-items: center;
-}
 
-label {
-    margin-top: 10px;
-    font-weight: bold;
-}
+
+
 
 input, textarea {
     padding: 10px;
@@ -84,26 +99,48 @@ input, textarea {
     width: 100%;
 }
 
-button {
-    margin-top: 15px;
-    padding: 10px;
-    background: #646464;
-    color: white;
-    border: none;
+
+
+
+.barrios {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f5f5f5;
     border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background 0.3s;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
 
-button:hover {
-    background: #505050;
+.contenedor-barrios {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 1200px;
 }
 
-footer, header {
+.barrio {
+    background: white;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    width: 30%;
+    text-align: center;
+    margin: 10px;
+}
+
+footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
     width: 100%;
+    position: relative;
+    bottom: 0;
 }
+
